# vae-vis

./: README.md
docs/: gpu-decoder.js  index.html
docs/pkg/: dog_wgpu_bg.wasm  dog_wgpu_bg.wasm.d.ts
src/: vae-train.py
src/python/: app.py  dog_app.py  dog_vae_128.pth  export_dog_weights.py  export_weights.py  models.py  quantize_dog.py
src/rust/dog_wasm/: Cargo.toml  index.html  test_gpu.html
src/rust/dog_wasm/src/: lib.rs  shaders.wgsl
src/rust/dog_wgpu/: Cargo.toml  gpu-decoder.js  index.html
src/rust/dog_wgpu/pkg/: dog_wgpu.d.ts  dog_wgpu.js  package.json
src/rust/dog_wgpu/src/: lib.rs
src/rust/vae_wasm/: Cargo.toml  index.html
src/rust/vae_wasm/src/: lib.rs  weights.rs
src/training/: dog.py  mnist.py  pixelcnn.py  vq-vae.py
