[package]
name = 'dog_wasm'
version = '0.1.0'
edition = '2021'

[lib]
crate-type = ['cdylib']

[dependencies]
wasm-bindgen = '0.2'
wgpu = '22.1.0'
wasm-bindgen-futures = '0.4'
js-sys = '0.3'
web-sys = { version = '0.3', features = ['console'] }
bytemuck = { version = '1.16', features = ['derive'] }
async-trait = '0.1'
futures-intrusive = "0.5"
